@@ -9,6 +9,7 @@ Coccinella-0.95.16 (200612??):
 
  o new dynamic status menus
  o new basic dialogs on unix
+ o new avatar settings button and menu
 
 
 Coccinella-0.95.15 (20061117):
